--- a/util/makefile_tfls.cfg
+++ b/util/makefile_tfls.cfg
@@ -1,5 +1,7 @@
 [l_01]
 command: saf/l_01.sas
+environment:651b17ba8f83f33663a335ec
 
 [t_01]
 command: saf/l_01.sas
+environment:651b17ba8f83f33663a335ec
